[package]
edition = "2021"
name = "shunting_solution"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.87"
serde_yaml = "0.9.13"

easy-error = "1"

petgraph = {version = "0.6", features = ["serde-1"]}
