[package]
edition = "2021"
name = "yard-viz-bevy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_yaml = "0.9.13"
shunting_location = {path = "../shunting_location"}

bevy = { version = "0.8" }
bevy_prototype_lyon = "0.6"